<resources>
    <string name="app_name" translatable="false">Homework 3.3.2</string>
    <string name="hello_text">Hello!</string>
    <string name="checkbox_text">I\'m a checkbox</string>
    <string name="button_text">I\'m a button</string>
    <string name="select_language_label" translatable="false">Select your language</string>
    <string name="apply_button">Apply</string>
    <string name="apply_button_english_only" translatable="false">Apply</string>
    <string name="button_toast_text">I do nothing</string>
    <string name="select_color_label">Select theme color</string>

    <string-array name="languages">
        <item>English</item>
        <item>Japanese</item>
        <item>Russian</item>
    </string-array>
    <string-array name="languages_codes">
        <item>en</item>
        <item>ja</item>
        <item>ru</item>
    </string-array>

    <string-array name="colors">
        <item>Black</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>
</resources>
